--- a/src/app/dishdetails/dishdetails.component.html
+++ b/src/app/dishdetails/dishdetails.component.html
@@ -103,6 +103,15 @@
 
   </div>
 
+  <div [hidden]="dish || errMess">
+      <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
+
+    <div *ngIf="errMess">
+        <h2>Error</h2>
+        <h4>{{errMess}}</h4>
+      </div>
+
  
 
 </div>
